tests/NormalTests/paczka1/fuzzy1/43068863.err
Error in line 1: POxvR5 S389 1,6
Error in line 11: A176 S389 61,4
Error in line 5: POxvR5 A614 33,0
Error in line 13: A176 A176 93,0
Error in line 18: rZR6MSw A614 15,5
Error in line 32: A176 A614 26,7
